[tool.poetry]
name = "repl-nix-temdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_temdb"}]

[tool.poetry.dependencies]
python = "^3.10"
socketio = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
